--- a/calorieCounter/concertBookingform/index.html
+++ b/calorieCounter/concertBookingform/index.html
@@ -105,7 +105,7 @@
                             <tr>
                                 <td width="5%"> </td>
                                 <td width ="500">Phone number</td>
-                                <td width="200">&nbsp;&nbsp;&nbsp; Date of Issue</td>
+                                <td width="200" style="font-size:18px; font-weight:800;">&nbsp;&nbsp;&nbsp; Date of Issue</td>
                                 <td width="200">&nbsp;&nbsp;&nbsp; </td>
                                 <td width="200">&nbsp;&nbsp;&nbsp; </td>
                             </tr>
@@ -119,11 +119,6 @@
                         </table>
                         <hr class="hr1"/>
                         <table>
-                            <colgroup>
-                                <col class="col1">
-                                <col class="col2">
-                                <col class="col3">
-                            </colgroup>
                             <thead>
                                 <tr>
                                     <th id="serials">Sr. No</th>
@@ -154,9 +149,16 @@
                             <tr>
                                 <th width="20%"></th>
                                 <th width="20%"></th>
-                                <th width="30%"></th>
-                                <th width="15%">Total Amount(Ksh): </th>
-                                <th width="%" id="total"></th>
+                                <th width="22%"></th>
+                                <th width="18%">Total(ksh): </th>
+                                <th width="10%" id="total">0.00</th>
+                            </tr>
+                            <tr>
+                                <th width="20%">//////////</th>
+                                <th width="20%">//////////</th>
+                                <th width="20%">//////////</th>
+                                <th width="20%">//////////</th>
+                                <th width="20%">//////////</th>
                             </tr>
                         </table>
                         <button type="button" id="calculate">COST</button>
